Colab을 통해 생성됨

--- a/01_웹셀(머신러닝_logisticregression).ipynb
+++ b/01_웹셀(머신러닝_logisticregression).ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOFqM/HYDNYJAmWESZoHHE4",
+      "authorship_tag": "ABX9TyPfNxLhBS3+oEzIZ6VnZvQi",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -28,13 +28,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 4,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "G6piGWZ1psey",
-        "outputId": "f2fad2fb-9206-456a-fc85-9e9592cd1762"
+        "outputId": "24765626-8045-43df-940b-f42451d51af8"
       },
       "outputs": [
         {
@@ -88,12 +88,13 @@
         "X_vectorized = vectorizer.fit_transform(X_data)\n",
         "\n",
         "# 3. 모델 학습 (로지스틱 회귀)\n",
-        "clf = LogisticRegression()\n",
+        "# clf = LogisticRegression(C=1.0, penalty='l2', solver='liblinear', max_iter=1000)\n",
+        "clf = LogisticRegression(max_iter=1000)\n",
         "clf.fit(X_vectorized, y_labels)\n",
         "\n",
         "# 4. 예측 테스트\n",
         "test_code = [\n",
-        "    '<?php echo \"관리자 페이지입니다.\"; ?>',                        # 정상\n",
+        "    '<?php echo \"관리자 페이지입니다.\"; ?>',                    # 정상\n",
         "    '<?php eval(base64_decode($_GET[\"cmd\"])); ?>',              # 웹셸\n",
         "    '<?php include(\"menu.php\"); echo $content; ?>',             # 정상\n",
         "    '<?php system(\"ls\"); ?>',                                   # 웹셸\n",
