Colab을 통해 생성됨

--- a/04_웹셀(self_attention).ipynb
+++ b/04_웹셀(self_attention).ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "name": "04_웹셀(self_attention).ipynb",
-      "authorship_tag": "ABX9TyMu3y/m/OeMTIT9a0d6s+uS",
+      "authorship_tag": "ABX9TyPQiNIJiKXZUHmL+XV71faj",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -29,28 +29,20 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": 2,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "iebo7CMCl2TN",
-        "outputId": "0432ed9c-3f2c-4aea-d0d8-af0bf8f2281d"
+        "outputId": "d216c8ba-a50f-49d5-afdd-e44ee1c2f00d"
       },
       "outputs": [
         {
           "output_type": "stream",
-          "name": "stderr",
-          "text": [
-            "/usr/local/lib/python3.11/dist-packages/keras/src/layers/core/embedding.py:90: UserWarning: Argument `input_length` is deprecated. Just remove it.\n",
-            "  warnings.warn(\n"
-          ]
-        },
-        {
-          "output_type": "stream",
           "name": "stdout",
           "text": [
-            "\u001b[1m1/1\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 99ms/step\n",
+            "\u001b[1m1/1\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 76ms/step\n",
             "[정상] → <?php echo \"관리자 페이지입니다.\"; ?>\n",
             "[웹셸] → <?php eval(base64_decode($_GET[\"cmd\"])); ?>\n",
             "[웹셸] → <?php echo shell_exec($_POST[\"cmd\"]); ?>\n",
@@ -150,14 +142,14 @@
         "# model.summary()\n",
         "\n",
         "# 5. 학습\n",
-        "model.fit(X_train, y_train, epochs=100, verbose=0)\n",
+        "model.fit(X_train, y_train, epochs=200, verbose=0)\n",
         "\n",
         "# 6. 테스트\n",
         "test_codes = [\n",
-        "    '<?php echo \"관리자 페이지입니다.\"; ?>',\n",
-        "    '<?php eval(base64_decode($_GET[\"cmd\"])); ?>',\n",
-        "    '<?php echo shell_exec($_POST[\"cmd\"]); ?>',\n",
-        "    '<?php include(\"footer.php\"); ?>'\n",
+        "    '<?php echo \"관리자 페이지입니다.\"; ?>',         # 정상\n",
+        "    '<?php eval(base64_decode($_GET[\"cmd\"])); ?>',   # 웹셀\n",
+        "    '<?php echo shell_exec($_POST[\"cmd\"]); ?>',      # 웹셀\n",
+        "    '<?php include(\"footer.php\"); ?>'                # 정상\n",
         "]\n",
         "\n",
         "test_seq = tokenizer.texts_to_sequences(test_codes)\n",
