Colab을 통해 생성됨

--- a/04_웹셀(self_attention).ipynb
+++ b/04_웹셀(self_attention).ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "name": "04_웹셀(self_attention).ipynb",
-      "authorship_tag": "ABX9TyPQiNIJiKXZUHmL+XV71faj",
+      "authorship_tag": "ABX9TyNvfe4jjg/Mf4a8fsNwXCyW",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -29,7 +29,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -51,7 +51,14 @@
         }
       ],
       "source": [
-        "\n",
+        "# Self-Attention 기반 웹셀 식별\n",
+        "\"\"\"\n",
+        "Attention의 직관적인 예시 (번역)]\n",
+        "예: “그는 사과를 먹었다”를 영어로 번역할 때\n",
+        "“먹었다”에 대응되는 영어는 “ate”\n",
+        "이때 모델은 “그는”보다는 “사과를”에 더 집중(Attention) 해야 번역이 정확함\n",
+        "→ 어텐션은 이런 중요도 판단을 가능하게 해줌\n",
+        "\"\"\"\n",
         "import tensorflow as tf\n",
         "from tensorflow.keras.layers import Layer, Input, Embedding, Dense\n",
         "from tensorflow.keras.models import Model\n",
